# src/app/api/models.ts
@@ -1,3 +1,4 @@
+export { Datacenter } from './models/datacenter';
 export { Location } from './models/location';
 export { OAuth } from './models/o-auth';
 export { OClaveValorS } from './models/o-clave-valor-s';
@@ -5,3 +6,4 @@ export { Price } from './models/price';
 export { PriceHourly } from './models/price-hourly';
 export { PriceMonthly } from './models/price-monthly';
 export { ServerType } from './models/server-type';
+export { ServerTypes } from './models/server-types';
