# src/app/api/models/server-types.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ServerTypes {
+  available?: null | Array<number>;
+  availableForMigration?: null | Array<number>;
+  supported?: null | Array<number>;
+}
